--- a/style.css
+++ b/style.css
@@ -1,46 +1,35 @@
-nav {
+html, body{
+   font-family: 'Poppins', sans-serif;
+   margin: 0;
+   padding: 0;
+   background-color: rgb(255, 255, 255);
+}
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
  }
 nav {
-    position: fixed;
+   
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #999797; /* Couleur de fond de la barre de navigation */
+    background-color: #908F8F; /* Couleur de fond de la barre de navigation */
     object-fit: cover;
     padding:  20px; /* Espacement interne */
     margin: none;
     color: #0A0909; /* Couleur du texte */
-    width: 100%;
+    /* width: 100%;  */
     z-index: 10;
+    height: 145px;
  }
- .button a {
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: rgb(54, 8, 110);
-    background-image: linear-gradient(
-      to top left,
-      rgb(0 0 0 / 20%),
-      rgb(0 0 0 / 20%) 30%,
-      rgb(0 0 0 / 0%)
-    );
- }
- .logo{
-    border-radius: 100px;
- }
- nav ul {
+  ul {
     list-style: none;
     display: flex;
-    gap: 20px; /* Espacement entre les éléments de la liste */
- }
+    gap: 30px;
+    margin-left: 400px;
+    margin-right: 20px;
+    }/* Espacement entre les éléments de la liste */
  nav ul li a {
     text-decoration: none;
     color: #fff;
@@ -48,45 +37,232 @@ nav {
  nav a:hover {
     color: black;
  }
- .img{
-    border-radius: 100px;
- }
- footer{
-    background-color: #0A0909;
-    text-align: center;
+ .button1 a {
+    background-color: rgb(55, 20, 255); /* Couleur du bouton */
     color: #fff;
-    font-weight: bold;
-    font-size: large;
-padding:20px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    /* margin-left: 600px; */
  }
- .button{
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
+.avatar {
+    height: 90px;
+}
+ /*FIN de la Section NAV */
+ /*Section HEADER*/
+ header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px; /* Espacement interne */
+    margin: none;
+    color: #0A0909; /* Couleur du texte */
+    /* width: 100%;  */
+     height: 350px;
+    /* z-index: 10; */
+    background-color: white;
+ }
+  h1, header{
+   text-align: center;
+   font-size: 40px;
+   color: #0A0909;
+   }
+   h1 {
+   margin: 0;
+   font-size: 36px;
+   }
+ /*header h1 {
     color: #fff;
-    text-shadow: 1px 1px 1px #000;
+ }
+ header p {
+      position: absolute;
+      top: 45%;
+      left: 55%;
+      transform: translate(-50%, -50%);
+      color: rgb(4, 4, 4);
+      text-align: center;
+      font-size: 2.0rem;
+ }
+ h2 {
+    margin-top: 40px;
+    text-align: center;
+    margin-bottom: 20px;
+ }*/
+ .article {
+   margin-top: 10px;
+    box-shadow: 0 4px 6px rgba(166, 214, 247, 0.5);
     border-radius: 10px;
-    background-color: rgb(79, 8, 110);
-    background-image: linear-gradient(
-      to top left,
-      rgb(0 0 0 / 20%),
-      rgb(0 0 0 / 20%) 30%,
-      rgb(0 0 0 / 0%)
-    );
-    box-shadow:
-      inset 2px 2px 3px rgb(255 255 255 / 60%),
-      inset -2px -2px 3px rgb(0 0 0 / 60%);
-  }
+    background-color: white;
+    width: 30%;
+    overflow: hidden;
+    margin-left: 10px;
+ }
+ .button2 a {
+    background-color: rgb(55, 20, 255); /* Couleur du bouton */
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 1100px;
+    margin-bottom: 40px;
+     width: 120px;
+}
+image {
+    margin-top: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    /* width: 80%; */
+    /* height: 150px; */
+}
+ /*header p {
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-align: center;
+    margin-top: 150px;
+ }*/
+ section h1{
+   text-align: center;
+   margin-bottom: 20px;
+ }
+ .button3 a{
+    background-color: gray; /* Couleur du bouton */
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 120px;
+ }
+.container {
+   margin-top: 40px;
+   margin-left: 20px;
+}
+.container h1 {
+    text-align: left;
+    margin-bottom: 20px;
+}
+.container p {
+    text-align: left;
+    margin-bottom: 20px;
+}
+ /*FIN de la Section HEADER*/
+ /*Section PRESENTATION*/
+
+ #imageContainer{
+   width:100%;
+   height: 900px;
+ }
+.presentation {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-bottom: 40px;
+}
+/*Section THEMES*/
+.themes {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-bottom: 40px;
+}
+/*-SECTION COMPRENANT LA DIV CLASS CONTAINER IMAGE ET BOUTON2-*/
+.produits-container {
+   display: flex;
+   justify-content: space-between;
+   gap: 12px;
+   margin-right: 20px;
+   margin-bottom: 80px;
+ }
+ .avatar2 {
+   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+   margin-left: 130px;
+ }
+ #avatar2 h2 {
+   text-align: center;
+ }
+.produits-container2 {
+   display: flex;
+   justify-content: space-between;
+   gap: 12px;
+}
+/*-SECTION COMPRENANT LA DIV CLASS l'AVATAR CONTAINER IMAGE ET BOUTON2-*/
+article .image{
+   width: 50%;
+   height: 320px;
+}
+.image img {
+   /* height: 300px;  */
+   /* width: 550px; */
+   width: 62%;
+   height: 100%;
+   object-fit: cover;
+}
+article{
+   width: 100%;
+}
+.text{
+   display: flex;
+   flex-direction: column;
+   width: 50%;
+}
+.text h1{
+   text-align:left;
+   margin-left: 20px;
+}
+.text h2{
+   text-align:left;
+   margin-top: 10px;
+   margin-left: 20px;
+}
+.text p{
+   text-align: left;
+   margin-top: 5px;
+   margin-left: 20px;
+}
+/* section AVATAR*/
+.avatar2{
+   width: 100px;
+   height: 100px;
+   object-fit: cover;
+   border-radius: 100%;
+   border: black solid 3px;
+}
+ .article h3, p{
   
-  .styled:hover {
-    background-color: rgb(79, 12, 160);
-  }
-  
-  .styled:active {
-    box-shadow:
-      inset -2px -2px 3px rgb(255 255 255 / 60%),
-      inset 2px 2px 3px rgb(0 0 0 / 60%);
-  }
-  
+   margin-bottom: 20px;
+ }
+  .button2{
+   align-items: center;
+ }
+ /*Section FIN de la section HEADER*/
+ footer p {
+   text-align: center;
+}
+footer {
+   background-color:rgb(144, 143, 143); /* Orange clair */
+   text-align: center; /* Centrer le texte */
+   padding: 15px; /* Ajouter un padding */
+}
+.social-icons{
+   margin-top: 20px;
+   margin-bottom: 80px;
+}
+nav ul li {
+   margin-right: 20px; /* Ajoutez de l'espace entre les éléments de la liste */
+ }
